# Soccer

./: .gitignore  API_DOCUMENTATION.md  BACKEND_API_ARCHITECTURE.md  BACKUP_COMPLETION_REPORT.md  BUG_FIX_REPORT.md  CACHE_IMPLEMENTATION_COMPLETION_REPORT.md  COMMERCIAL_IMPLEMENTATION_COMPLETION_REPORT.md  COMPREHENSIVE_GAP_ANALYSIS_REPORT.md  CONFIDENCE_SYSTEM_FIX_REPORT.md  DEPLOYMENT_OPERATIONS_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_SUMMARY.md  DOCUMENTED_PREDICTION_DATA_FIELDS.md  DYNAMIC_XG_CALCULATOR_DOCS.md  ELO_INTEGRATION_FIX_REPORT.md  ENHANCED_PREDICTION_SYSTEM_DOCS.md  ENHANCED_SYSTEM_ARCHITECTURE.md  EXECUTIVE_SUMMARY.md  FASTAPI_BACKEND_FIXES_REPORT.md  FINAL_SYSTEM_DOCUMENTATION.md  FIXTURE_STATISTICS_IMPLEMENTATION_GUIDE.md  FIXTURE_STATISTICS_INTEGRATION_REPORT.md  FIXTURE_STATISTICS_INTEGRATION_RESEARCH.md  FRONTEND_ARCHITECTURE.md  GOALS_PREDICTION_ENHANCEMENT_PLAN.md  IDENTICAL_PROBABILITIES_DEBUG_REPORT.md  IMPLEMENTATION_PLAN_CRITICAL_IMPROVEMENTS.md  INTEGRATION_ANALYSIS_REPORT.md  INTEGRATION_ISSUES_ANALYSIS.md  MASTER_PIPELINE_COMMERCIAL_DOCS.md  MONETIZATION_PLATFORM_PLAN.md  ODDS_BASED_DISCOVERY_COMPLETE_REPORT.md  ODDS_BASED_DISCOVERY_UPDATE_REPORT.md  PLANES_PENDIENTES_IMPLEMENTACION.md  PREDICTION_ACCURACY_IMPROVEMENT_REPORT.md  PROBABILITY_CONVERSION_SYSTEM.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_RECOVERY_GUIDE.md  README.md  README_DOCUMENTATION.md  (+361 more)
documentation/: 1x2_prediction_workflow.md  prediction_workflows.md  technical_overview.md
implementation/: system_architecture.md
model_training/: train_corner_models.py
(+11 files in other folders)
