[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer"
version = "3.0.0"
description = "Soccer prediction API"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
]

[tool.pytest]
testpaths = ["src/soccer/tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'